Make kg-text gray when input field is disabled

--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -222,6 +222,13 @@ aside {
     margin-top: 24px;
 }
 
+.kg-text-disabled {
+    position: absolute;
+    margin-left: -80px;
+    margin-top: 24px;
+    color: #929292;
+}
+
 .form--input {
     height: 50px;
     width: 250px;
