--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -108,7 +108,9 @@ main {
     min-height: calc(100vh - 87px);
     position: relative;
     display: grid;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: 2fr 1fr;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .main-centered {
@@ -626,7 +628,7 @@ aside {
     padding: 10px;
     margin: 0;
     margin-left: 14px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     width: 90%;
 }
 
@@ -764,12 +766,21 @@ aside {
     border: none;
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1500px) {
     aside {
         grid-column-start: 1;
         grid-row-start: 14;
         margin-bottom: 40px;
         background-color: white;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    main {
+        max-width: 1400px;
+    }
+    .diagnosis-menu {
+        margin-left: 100px;
     }
 }
 
