--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -35,15 +35,9 @@ button, a, li, input {
     margin-right: 40px;
 }
 
-.header--title-link {
-    background: none!important;
-    text-decoration: none;
-    border: none;
-    padding-left:5px;
-    padding: 0!important;
-    color: white;
-    margin-left: 50px;
-    font-size: 24px;
+.logo {
+    height: 50px;
+    padding-left: 10px;
 }
 
 .header--title-link {
