Show loading indicator for feedback form

--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -761,6 +761,10 @@ aside {
     border: none;
 }
 
+#hidden {
+    display: none;
+}
+
 @media only screen and (max-width: 1500px) {
     aside {
         grid-column-start: 1;
