--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -765,6 +765,29 @@ aside {
     display: none;
 }
 
+.page-not-found {
+    font-family: Inter, sans-serif;
+    text-align: center;
+    padding: 80px;
+    margin: auto;
+    width: 70%;
+    background-color: white;
+    min-height: calc(100vh - 87px);
+}
+
+.page-not-found h2 {
+    margin-bottom: 60px;
+}
+
+.page-not-found-btn {
+    background: none!important;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 5px;
+    border: none;
+    font-size: 16px;
+}
+
 @media only screen and (max-width: 1500px) {
     aside {
         grid-column-start: 1;
