added hamburger menu

--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -793,9 +793,51 @@ aside {
     font-size: 16px;
 }
 
+.mobile-container {
+    display: block;
+    margin: 10px;
+    max-width: 200px;
+}
+
+.mobile-nav-links {
+    display: none;
+}
+
+.mobile-menu-btn {
+    background-color: #5D769A;
+    border: none;
+    position: relative;
+    margin: auto;
+}
+
+.mobile-nav {
+    position: relative;
+    max-width: 480px;
+    background-color: #5D769A;
+    z-index: 4;
+}
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+    display: block;
+    padding: 14px 16px;
+}
+
+.mobile-nav-links :nth-child(odd) {
+    background-color: #4c627e;
+}
+
+.show-menu {
+    display: block;
+    margin-top: 150px;
+  }
+
 @media only screen and (max-width: 500px) {
-    main {
-        max-width: 500px;
+     .header--links {
+        display: none;
+    } ion-icon {
+        color: white;
     } aside {
         grid-column-start: 1;
         grid-row-start: 14;
@@ -836,6 +878,8 @@ aside {
         margin-left: 30px;
     } .not-active-class {
         margin-left: 30px;
+    } .mobile-container {
+        display: none;
     }
 }
 
@@ -845,6 +889,8 @@ aside {
     }
     .diagnosis-menu {
         margin-left: 100px;
+    } .mobile-container {
+        display: none;
     }
 }
 
