--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -835,6 +835,13 @@ aside {
   }
 
 @media only screen and (max-width: 500px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    }
      .header--links {
         display: none;
     } ion-icon {
@@ -846,26 +853,23 @@ aside {
         width: 70%;
         background-color: white;
         overflow-x: hidden;
-    } .treatment-container {
-        width: 70%;
-    } .recipe-container {
-        width: 70%;
     } .treatment-header {
         font-size: 14px;
-    } .antibiotic-instructions {
-        width: 70%;
-        font-size: 16px;
     } section > h1 {
         font-size: 22px;
-    } .diagnosis-form {
-        width: 70%;
-    } .form--button {
-        width: 200px;
-    } .form--input {
-        width: 200px;
     } .strepto-info {
         width: 100%;
-    } 
+    } .weight-input {
+        padding-right: 0px;
+    } .diagnosis-form  {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 10px;
+        margin-bottom: 15px;
+    } .diagnosis-menu {
+        margin-top: 20px;
+    }
 }
 
 
