--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -694,8 +694,6 @@ aside {
 .info-links {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
 }
 
 .info-links button {
@@ -939,12 +937,7 @@ aside {
 }
 
 @media only screen and (min-width: 601px) {
-    aside {
-        grid-column-start: 1;
-        grid-row-start: 14;
-        margin-bottom: 40px;
-        background-color: white;
-    }  .mobile-container {
+    .mobile-container {
         display: none;
     } .antibiotics {
        margin-left: 4%;
@@ -952,9 +945,7 @@ aside {
         margin-left: 25px;
     } .not-active-class {
         margin-left: 25px;
-    }   .antibiotic-instructions {
-        max-width:fit-content;
-    } 
+    }   
 }
 
 @media only screen and (min-width: 720px){
@@ -976,7 +967,17 @@ aside {
         margin-left: 100px;
     } .mobile-container {
         display: none;
-    }    
+    } .aside {
+        background-color: #FBFBFB;
+        z-index: -1;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-weight: 400;
+        font-size: 14px;
+    }
+       
 }
 
 .loading-container {
