--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -106,7 +106,6 @@ main {
     position: relative;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    max-width: 800px;
     margin: 0 auto;
     overflow-x: hidden;
 }
@@ -290,7 +289,7 @@ aside {
 
 .dropdown-btn ion-icon {
     position: absolute;
-    right: 12px;
+    right: 16px;
 }
 
 .dropdown-btn {
@@ -298,7 +297,7 @@ aside {
     border: none;
     font-size: 16px;
     margin-top: 5px;
-    margin-left: 8px;
+    margin-left: 18px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -322,6 +321,7 @@ aside {
     position: relative;
     vertical-align: top;
 }
+
 
 .disabled {
     color: #929292;
@@ -383,14 +383,15 @@ aside {
     width: 250px;
     padding: 0;
     margin-left: -1px;
-    padding-bottom: 15px;
-    padding-top: 15px;
+    padding-bottom: 0px;
+    padding-top: 10px;
     background-color: #D7E2F2;
     border-bottom: 1.5px solid #395174;
     border-left: 1.5px solid #395174;
     border-right: 1.5px solid #395174;
     border-radius: 0px 0px 20px 20px;
 }
+
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -419,6 +420,10 @@ aside {
 .menu--items li:hover {
     background-color: #5D769A;
     color: white;
+}
+
+.menu--items :last-child {
+    border-radius: 0px 0px 20px 20px;
 }
 
 .recipe-container {
@@ -614,7 +619,7 @@ aside {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 2.5%;
-    padding: 0px;
+    padding: 2px;
 }
 
 .recipe-text {
@@ -625,7 +630,7 @@ aside {
     font-size: 16px;
     padding: 10px;
     margin: 0;
-    margin-left: 14px;
+    margin-left: 8px;
     margin-bottom: 20px;
     width: 90%;
 }
@@ -635,13 +640,14 @@ aside {
     width: 95%;
     justify-content: space-between;
     background-color: white;
-    padding-bottom: 5px;
-    margin-left: 0;
+    padding-bottom: 8px;
+    margin-left: 0px;
+    padding: 8px;
 }
 
 .copy-button {
     position: absolute;
-    bottom: 10%;
+    bottom: 9%;
     right: 3%;
     background-color: white;
     min-width: 25%;
@@ -652,7 +658,8 @@ aside {
     color: #395174;
     box-shadow: 0 1.5px #7b7979;
     padding: 10px;
-    text-indent: 5px;
+    text-indent: 7px;
+    margin-right: 5px;
 }
 
 .copy--image {
@@ -836,6 +843,7 @@ aside {
     display: block;
     margin-top: 195px;  
   }
+  
 
 /*Scalability to mobile screen*/
 @media only screen and (max-width: 600px) {
@@ -852,6 +860,7 @@ aside {
         flex-direction: column;
         align-items: center;      
     } .antibiotics {
+        width: 85%;
         margin-left: 4%;
         margin-right: 4%;
     } .feedback-container {
@@ -885,7 +894,7 @@ aside {
         margin-bottom: 15px;
     } .diagnosis-menu {
         margin-top: 20px;
-    } section {
+    }  section {
         max-height:fit-content;
     } .checkbox-container {
         height: 50px;
@@ -937,6 +946,10 @@ aside {
         right: -10px;
     } .logo {
         padding-left: 0px;
+    } .menu--items > li {
+        height: 48px;
+    }  .menu--items {
+        line-height: 45px;
     }
 }
 
@@ -949,7 +962,7 @@ aside {
         margin-left: 25px;
     } .not-active-class {
         margin-left: 25px;
-    }   
+    }    
 }
 
 @media only screen and (min-width: 720px){
@@ -962,6 +975,7 @@ aside {
         margin-left: 60px;
     }    
 }
+
 
 @media only screen and (min-width: 1500px) {
     main {
