--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -512,6 +512,20 @@ aside {
     align-self: flex-end;
 }
 
+.max-dosage-container {
+    align-self: center;
+    justify-self: center;
+    margin-top: -10px;
+    margin-left: 5px;
+    margin-right: 3%;
+    width: 70%;
+}
+
+.max-dosage-text {
+    color: red;
+    font-size: 12px;
+}
+
 .btn-calculate {
     margin-top: 2px;
     margin-left: 2.5%;
@@ -956,7 +970,7 @@ aside {
         margin-left: 60px;
     } .not-active-class {
         margin-left: 60px;
-    }    
+    } 
 }
 
 @media only screen and (min-width: 1500px) {
@@ -976,7 +990,7 @@ aside {
         align-items: center;
         font-weight: 400;
         font-size: 14px;
-    }
+    } 
        
 }
 
