--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -101,14 +101,13 @@ footer {
 
 main {
     font-family: Inter, sans-serif;
-    width: 100;
+    width: 100%;
     min-height: calc(100vh - 87px);
     position: relative;
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin: 0 auto;
-    margin-left: px;
-    overflow-x: hidden;
+    max-width: 800px;
 }
 
 .main-centered {
@@ -127,6 +126,8 @@ main {
     flex-direction: column;
     margin-left: 10%;
     margin-right: 10%;
+    max-width: 750px;
+    width: 80%;
 }
 
 section {
@@ -886,7 +887,7 @@ aside {
     } .aside {
         grid-column-start: 1;
         grid-row-start: 14;
-        margin-bottom: 40px;
+        margin-bottom: 0px;
         width: 100%;
         background-color: white;
         overflow-x: hidden;
@@ -1011,7 +1012,9 @@ aside {
         background-color: white;
     } .logo {
         padding-left: 10px;
-    }  
+    } .diagnosis-form {
+        max-width: 100%;
+    }
 }
 
 @media only screen and (min-width: 720px){
@@ -1045,8 +1048,9 @@ aside {
         font-size: 14px;
         grid-column-start: 2;
         grid-row-start: 1;
-    }
-       
+    }  .antibiotics {
+        max-width: 750px;
+    }     
 }
 
 .loading-container {
