--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -445,7 +445,7 @@ aside {
 .treatment-header {
     color: black;
     margin-top: 8px;
-    margin-left: 23px;
+    margin-left: 15px;
     display: flex;
     gap: 14px;
 }
@@ -456,14 +456,30 @@ aside {
     font-weight: 900;
 }
 
-.treatment-icon {
+.treatment-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 6px;
     border-radius: 50%;
-    background-color: #D6D6D6;
     width: 37px;
     height: 37px;
     text-align: center;
     color: #5D769A;
+}
+
+.treatment-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 8px;
+    margin-top: 2px;
+    padding: 8px;
+    border-radius: 50%;
+    background-color: #D6D6D6;
+    height: 35px;
+    width: 35px;
+    text-align: center;
 }
 
 .treatment-choises {
@@ -570,6 +586,11 @@ aside {
 .func-icon-closed, .func-icon-open {
     width: 40px;
     height: 40px;
+}
+
+.pill-icon {
+    width: 80px;
+    height: 80px;
 }
 
 .strepto-info {
