--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -925,12 +925,15 @@ aside {
         margin-top: 10px;
     } .header--links {
         display: none;
+    } .antibiotic-instructions{
+        margin-left: 15px;
+        margin-right: 15px;
     } .antibiotic-instructions > p {
         display: flex;
         flex-direction: column;
         align-items: center;      
     } .antibiotics {
-        width: 85%;
+        width: 93%;
         margin-left: 3%;
         margin-right: 3%;
     } .feedback-container {
@@ -953,6 +956,7 @@ aside {
         font-size: 24px;
         margin-top: 30px;
         font-family: Arial, Helvetica, sans-serif;
+        margin-left: 15px;
     }  .strepto-info {
         width: 100%;
         height: 2.7em;
@@ -1092,7 +1096,7 @@ aside {
         width: 100%;
     } .treatment-calculations {
         margin-top: 10px;
-    }
+    } 
 }
 
 @media only screen and (min-width: 601px) {
