--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -500,6 +500,20 @@ aside {
     color: #5D769A;
 }
 
+.no-treatment-icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    text-align: center;
+    color: #5D769A;
+    margin-left: 5px;
+    margin-top: 2px;
+    background-color: #D6D6D6;
+}
+
 .treatment-icon {
     display: flex;
     align-items: center;
@@ -624,6 +638,10 @@ aside {
 .pill-icon, .pen-icon, .weight-icon {
     width: 80px;
     height: 80px;
+    pointer-events: none;
+}
+
+.no-antibiotic-icon {
     pointer-events: none;
 }
 
