--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -797,7 +797,7 @@ aside {
 .info-links button {
     font-size: 18px;
     border: none;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
 }
 
 .info-links button:active {
@@ -817,9 +817,6 @@ aside {
     margin-bottom: 60px;
 }
 
-.info-links :last-child {
-    margin-bottom: 70px;
-}
 
 .info-paragraph {
     margin-bottom: 10px;
@@ -1083,7 +1080,9 @@ aside {
     } .info-links button {
         font-family: Arial, Helvetica, sans-serif;
         background-color: #ffffff;
-    }.mobile-nav {
+    } .info-links :last-child {
+        margin-bottom: 70px;
+    } .mobile-nav {
         right: -10px;
     } .logo {
         padding-left: 0px;
