--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -249,18 +249,10 @@ aside {
     margin-top: 24px;
 }
 
-.weight-icon {
+.weight-icon, .weight-icon-disabled {
     position: absolute;
     top: -29px;
     right: -70px;
-}
-
-.weight-icon-disabled {
-    position: absolute;
-    top: -3.5px;
-    right: -42px;
-    width: 28px;
-    height: 28px;
 }
 
 .kg-text-disabled {
@@ -644,7 +636,7 @@ aside {
     pointer-events: none;
 }
 
-.pill-icon, .pen-icon, .weight-icon {
+.pill-icon, .pen-icon, .weight-icon, .weight-icon-disabled{
     width: 80px;
     height: 80px;
     pointer-events: none;
