--- a/frontend/antibiootit/src/style.css
+++ b/frontend/antibiootit/src/style.css
@@ -968,11 +968,7 @@ aside {
     } .antibiotic-instructions{
         margin-left: 15px;
         margin-right: 15px;
-    } .antibiotic-instructions > p {
-        display: flex;
-        flex-direction: column;
-        align-items: center;      
-    } .antibiotics {
+    }  .antibiotics {
         width: 93%;
         margin-left: 3%;
         margin-right: 3%;
@@ -983,7 +979,9 @@ aside {
     } .feedback-form {
         width: 100%;
         max-width: 100%;
-    } .aside {
+    } section {
+        margin-bottom: 1px;
+    }.aside {
         grid-column-start: 1;
         grid-row-start: 14;
         margin-bottom: 0px;
@@ -1013,8 +1011,6 @@ aside {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 10px;
-        margin-bottom: 15px;
         font-family: Arial, Helvetica, sans-serif;
     } .diagnosis-menu-choose {
         font-size: 18px; 
@@ -1032,7 +1028,7 @@ aside {
         margin-left: 10px;
         font-family: Arial, Helvetica, sans-serif;
         color: black;
-    } section {
+    } .diagnosis-menu-choose section {
         max-height:fit-content;
     } .checkbox-container {
         width: 240px;
@@ -1067,7 +1063,6 @@ aside {
         font-size: 14px;
         margin-right: 3px;
         text-indent: 0px;
-        overflow: hidden;
     } .copy--image {
         width: 17px;
     } .info-container {
@@ -1140,7 +1135,8 @@ aside {
     } .dropdown-btn {
         margin-top: 0px;
     } .form--button {
-        width: 280px;
+        width: 90%;
+        max-width: 280px;
         height: 55px;
         font-size: 18px;
         box-shadow:none;
@@ -1158,13 +1154,13 @@ aside {
         align-items: flex-end;
     } .recipe-header-container {
         margin-left: -35px;
-    }.treatment-icon {
+    } .treatment-icon {
         margin-left: -5px;
     } .treatment-extra{
         height: auto;
         flex-direction: column;
         align-self: flex-start;
-    }.pen-icon  {
+    } .pen-icon  {
         margin-left: -15px;
     } .description-container {
         align-self: flex-start;
@@ -1231,11 +1227,11 @@ aside {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        align-self: flex-start;
+        font-family: Arial, Helvetica, sans-serif;
     } .info-links button {
         font-family: Arial, Helvetica, sans-serif;
     } .info-links :last-child {
-        margin-bottom: 70px;
+        margin-bottom: 40px;
     }  .info-links > * {
         margin-bottom: 12px;
     } .info-line {
@@ -1246,12 +1242,13 @@ aside {
         font-family: Arial, Helvetica, sans-serif;
         font-weight: bold;
     } .info-container h3 {
-        margin-top: 0px;
+        align-self: flex-start;
+        margin-top: 35px;
         margin-bottom: 30px;
         font-family: Arial, Helvetica, sans-serif;
     } .info-container > h2 {
         align-self: center;
-    }
+    } 
 }
 
 @media only screen and (max-width: 1200px) {
